publish: adding rotating tiles for skills, and fixed bug where mt description  overflowed container
generated from commit 073f82baefcd004a54d533bde508800f70e3db71

--- a/css/app.css
+++ b/css/app.css
@@ -5839,7 +5839,10 @@ header {
   top: 0px;
   width: 100%;
   z-index: 50;
-  background-color: white; }
+  background-color: white;
+  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  /* Firefox 3.5 - 3.6 */
+  box-shadow: 3px 1px 8px 0px #666; }
   header h1 {
     display: inline-block;
     position: absolute;
@@ -5956,6 +5959,20 @@ header {
     margin: 15px auto;
     height: 100px;
     display: block; }
+  .techs h1 {
+    margin-bottom: 15px;
+    margin-top: 15px; }
+
+.tech-wrapper {
+  padding: 2px;
+  height: 150px;
+  position: relative;
+  -webkit-perspective: 800px;
+          perspective: 800px; }
+
+.portfolio {
+  top: 0;
+  margin-top: 10px; }
 
 .port-odd {
   padding: 20px;
@@ -5975,10 +5992,18 @@ header {
     text-align: center;
     text-transform: uppercase;
     font-family: 'Montserrat';
-    font-weight: bold; }
+    font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis; }
   .port-odd p {
+    max-height: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin-bottom: 10px;
     padding: 15px; }
+  .port-odd h3 {
+    overflow: hidden;
+    text-overflow: ellipsis; }
 
 .port-even {
   padding: 20px;
@@ -6002,7 +6027,13 @@ header {
     font-weight: bold; }
   .port-even p {
     margin-bottom: 10px;
-    padding: 15px; }
+    padding: 15px;
+    max-height: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  .port-even h3 {
+    overflow: hidden;
+    text-overflow: ellipsis; }
 
 .port-img {
   display: inline-block;
@@ -6101,4 +6132,53 @@ header {
   display: inline-block;
   padding-top: 10px;
   margin: 0px; }
+
+.front {
+  background: white; }
+
+.back {
+  background: white;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg); }
+
+.card {
+  width: 100%;
+  height: 100%;
+  margin-bottom: -5px;
+  position: absolute;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s; }
+  .card h4 {
+    max-width: 100%;
+    padding-top: 40px;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 1.5em;
+    line-height: 25px;
+    text-transform: uppercase;
+    text-align: center; }
+
+.card:hover {
+  width: 100%;
+  border-radius: 2px;
+  cursor: pointer;
+  box-shadow: 3px 1px 8px 0px #666; }
+
+.card div {
+  margin: 0;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden; }
+
+.card.flipped {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg); }
+
 /*# sourceMappingURL=app.css.map */
